# StoneKnights

./: .gitignore  Board.cpp  Board.h  CMakeLists.txt  Constants.h  GamePlay.md  GameState.cpp  GameState.h  Knight.cpp  Knight.h  Piece.cpp  Piece.h  Player.cpp  Player.h  Position.cpp  Position.h  Readme.md  Stone.cpp  Stone.h  main.cpp  r
